--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "svelte-boilerplate",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev",
+    "build": "vite build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-netlify": "^1.0.0-next.58",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.71",
     "@sveltejs/kit": "next",
-    "svelte": "^3.44.0"
+    "svelte": "^3.44.0",
+    "vite": "^3.0.2"
   },
   "type": "module",
   "dependencies": {
     "sass": "^1.51.0",
+    "svelte-markdown": "^0.2.2",
     "svelte-preprocess": "^4.10.6"
   }
 }
